Akeeba Data Compliance 3.0.1
================================================================================
# [LOW] Bootstrap 5.1.2 included in Joomla 4.0.4 broke the CSS for Control Panel icons
# [LOW] Bad grammar “consent with” (sic) instead of “consent to” in COM_DATACOMPLIANCE_OPTIONS_CONSENT_PREFERENCELABEL. Thanks, Peter for the heads up!

Akeeba Data Compliance 3.0.0
================================================================================
! Rewritten as a native Joomla 4 component

Akeeba Data Compliance 2.0.4
================================================================================
+ Use Joomla Privacy plugins when removing users

Akeeba Data Compliance 2.0.3
================================================================================
~ Changes in Joomla 4.0.0-RC5 broke the date and time input fields. Now using native HTML 5 controls.
# [HIGH] The Privacy Policy article is not displayed in the data options page
# [HIGH] Uninstallation broken on Joomla 4 due to different installation script event handling.

Akeeba Data Compliance 2.0.2
================================================================================
~ Joomla changed the location of cacert.pem

Akeeba Data Compliance 2.0.1
================================================================================
~ Converted all tables to InnoDB for better performance
~ Updated Charts.js
# [HIGH] Cannot delete user or export settings from the frontend

Akeeba Data Compliance 2.0.0
================================================π================================
+ Rewritten to use FOF 4.0
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
+ Kills the redirection imposed by the Joomla privacy consent to avoid an infinite redirection loop
+ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later

Akeeba Data Compliance 1.2.5
================================================================================